Name new font explicitly

--- a/remaster/iso_post/grub/grub.cfg
+++ b/remaster/iso_post/grub/grub.cfg
@@ -1,5 +1,5 @@
 
-if loadfont /boot/grub/larger.pf2 ; then
+if loadfont /boot/grub/DejaVuSansMono32.pf2 ; then
 	set gfxmode=auto
 	insmod efi_gop
 	insmod efi_uga
