--- a/remaster/chroot/systemd/fix_tty1_font.service
+++ b/remaster/chroot/systemd/fix_tty1_font.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Set console font for /dev/tty1
-After=local-fs.target getty@tty1.service
+After=local-fs.target getty@tty1.service console-setup.service
 ConditionPathExists=/bin/setupcon
 ConditionPathExists=/bin/openvt
 
