Add fix for tty1 to overridden console-setup.service

--- a/remaster/chroot/systemd/console-setup.service.d/console-setup_override.conf
+++ b/remaster/chroot/systemd/console-setup.service.d/console-setup_override.conf
@@ -1,17 +1,19 @@
 [Unit]
-Description=Set console font for /dev/tty1
-After=local-fs.target getty@tty1.service console-setup.service
+Description=Set console font and keymap
+DefaultDependencies=no
+After=console-screen.service kbd.service local-fs.target
+RequiresMountsFor=/usr
 ConditionPathExists=/bin/setupcon
-ConditionPathExists=/bin/openvt
 
 [Service]
 Type=oneshot
-# Following ExecStart commands will run serially
+ExecStart=/lib/console-setup/console-setup.sh
+# Fix tty1 after console-setup is run
 ExecStart=/bin/openvt -c 1 -f -w /bin/setupcon 
 ExecStart=/bin/systemctl stop getty@tty1.service
 ExecStart=/bin/systemctl start getty@tty1.service
-
 RemainAfterExit=yes
 
 [Install]
 WantedBy=multi-user.target
+
