Fix path for openvt

--- a/remaster/chroot/systemd/console-setup.service.d/console-setup_override.conf
+++ b/remaster/chroot/systemd/console-setup.service.d/console-setup_override.conf
@@ -9,7 +9,7 @@ ConditionPathExists=/bin/setupcon
 Type=oneshot
 ExecStart=/lib/console-setup/console-setup.sh
 # Fix tty1 after console-setup is run
-ExecStart=/bin/openvt -c 1 -f -w /bin/setupcon 
+ExecStart=/usr/bin/openvt -c 1 -f -w /bin/setupcon 
 ExecStart=/bin/systemctl stop getty@tty1.service
 ExecStart=/bin/systemctl start getty@tty1.service
 RemainAfterExit=yes
