--- a/remaster/chroot/systemd/console-setup.service.d/console-setup_override.conf
+++ b/remaster/chroot/systemd/console-setup.service.d/console-setup_override.conf
@@ -1,7 +1,7 @@
 [Unit]
 Description=Set console font and keymap
 DefaultDependencies=no
-After=console-screen.service kbd.service local-fs.target
+After=console-screen.service kbd.service local-fs.target getty@tty1.service
 RequiresMountsFor=/usr
 ConditionPathExists=/bin/setupcon
 
