--- a/remaster/chroot/systemd/fix_tty1_font.service
+++ b/remaster/chroot/systemd/fix_tty1_font.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Set console font for /dev/tty1
-After=local-fs.target getty@tty1.service console-setup.service
+After=local-fs.target
 ConditionPathExists=/bin/setupcon
 ConditionPathExists=/usr/bin/openvt
 
@@ -8,9 +8,10 @@ ConditionPathExists=/usr/bin/openvt
 Type=oneshot
 # Following ExecStart commands will run serially
 ExecStart=/usr//bin/openvt -c 1 -f -w /bin/setupcon 
-ExecStart=/bin/systemctl stop getty@tty1.service
-ExecStart=/bin/systemctl start getty@tty1.service
+#ExecStart=/bin/systemctl stop getty@tty1.service
+#ExecStart=/bin/systemctl start getty@tty1.service
 RemainAfterExit=yes
 
 [Install]
+WantedBy=getty.target
 WantedBy=multi-user.target
